fix: ui waitlist post jobs
